<resources>
    <string name="app_name">UShop</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Opciones</string>
    <string name="title_activity_menu_shop">MenuShop</string>

    <string name="title_section1">Inicio</string>
    <string name="title_section2">Preferencias</string>
    <string name="title_section3">Tareas</string>
    <string name="title_section4">Otro</string>
    <string name="title_section5">Cerrar Sesión</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <!-- Strings para la vista principal (main-login) -->
    <string name="uShhop_main">uShop</string>
    <string name="rememberUser_main">No cerrar sesión</string>
    <string name="registrar_main">Registrarme</string>
    <string name="ingresar_main">Ingresar</string>
    <string name="contrasena_main">Contraseña</string>
    <string name="nombre_main">Nombre</string>

    <!-- Strings para la vista registro -->
    <string name="title_activity_registro">Registro</string>
    <string name="registro_textview_registrouShop">Registro</string>
    <string name="registro_hint_Nombre">Nombre</string>
    <string name="registro_hint_contrasena">Contraseña</string>
    <string name="registro_hint_correo">e-mail</string>
    <string name="registro_hint_telefono">Telefono</string>
    <string name="registro_button_registrar">Registrar</string>

    <!-- Strings para el fragment preferencia -->
    <string name="fragment_preferencia_title">Añadir Preferencia</string>
    <string name="fragment_preferencia"></string>

    <!-- Strings para el fragment tareas -->
    <string name="title_fragment_tareas">Tareas</string>

</resources>
