<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.irvin.ushop.Registro">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/registro_textview_registrouShop"
                android:id="@+id/registrotview"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/usernamereg"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:hint="@string/registro_hint_Nombre"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/paswreg"
                android:layout_gravity="center_horizontal"
                android:hint="@string/registro_hint_contrasena"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emailreg"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:layout_gravity="center_horizontal"
                android:hint="@string/registro_hint_correo"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/telefonoreg"
                android:inputType="phone"
                android:ems="10"
                android:layout_gravity="center_horizontal"
                android:hint="@string/registro_hint_telefono"
                />

            <Button
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/registro_button_registrar"
                android:id="@+id/reg"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:onClick="enviarRegistro" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/mensajereg"
                android:layout_marginTop="30dp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
